--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ paho-mqtt==1.6.1
 pyaarlo==0.8.0a14
 pycryptodome==3.12.0
 pyparsing==3.0.6
+python-dotenv==0.19.2
 python-telegram-bot==13.10
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
