--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 APScheduler==3.6.3
+autopep8==1.6.0
 backports.zoneinfo==0.2.1
 cachetools==4.2.2
 certifi==2021.10.8
@@ -8,6 +9,7 @@ cloudscraper==1.2.58
 idna==3.3
 paho-mqtt==1.6.1
 pyaarlo==0.8.0a14
+pycodestyle==2.8.0
 pycryptodome==3.12.0
 pyparsing==3.0.6
 python-dotenv==0.19.2
@@ -17,6 +19,7 @@ pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
 requests-toolbelt==0.9.1
 six==1.16.0
+toml==0.10.2
 tornado==6.1
 tzdata==2021.5
 tzlocal==4.1
